--- a/web/css/main.css
+++ b/web/css/main.css
@@ -32,6 +32,49 @@ and open the template in the editor.
 .thumb{
     width: 100px;
 }
+.main-container{
+    margin-top: 40px;
+    margin-left: 60px;
+    margin-right: 60px;
+    padding: 70px 15px 20px;    
+}
+/*NAV*/
+.nav-container{ /*include menu item and search bar*/
+    background: rgb(248, 248, 248);
+    transition: background .2s linear;
+    -webkit-transition: background .2s linear;
+}
+.nav-search-menu{
+    margin-top: 8px;
+}
+.nav-main-menu{
+    border-color: transparent;
+    margin-bottom: 0;
+}
+#nav-search-product{
+    border-radius: 33px 0 0 33px;
+}
+#search-product-btn{
+    border-radius: 0 33px 33px 0;
+}
+/*NAV TRANSPARENT*/
+div.nav-transparent{
+    background: transparent;
+}
+div.nav-transparent .navbar-nav > li > a,
+div.nav-transparent .navbar-brand,
+div.nav-transparent .btn-link{
+    color: white;
+}
+div.nav-transparent .navbar-nav > li > a:hover,
+div.nav-transparent .btn-link:hover{
+    background: white;
+    color: #448f37!important;
+}
+div.nav-transparent .navbar-toggle .icon-bar{
+    background: #dedede;
+}
+
 
 /* The switch - the box around the slider */
 .switch {
@@ -102,8 +145,150 @@ input:checked + .slider:before {
     width: 12px;
 }
 
-/*Dropdown inside list group*/
+/*DROPDOWN inside list group*/
 .list-group>.list-group-item>select{
     width: auto;
     float: right;
+}
+
+/*Homepage background*/
+.home-background{
+    width: 100%;
+    height: 670px;
+    background-image: linear-gradient(#279033, #008555, #00776A);
+    position: relative;
+}
+.banner-container{
+    position: relative;
+    width: 100%;
+    top: 30%;
+    text-align: center;
+}
+/*Title*/
+.home-background>.banner-container>h1{
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    top: 0;
+    color: white;
+    font-family: 'Lobster', cursive;
+    font-size: 39px; 
+    font-weight: bold; 
+    line-height: 40px; 
+    margin: 0 0 18px; 
+    text-shadow: 1px 0 0 #fff;
+}
+/*Description*/
+.home-background>.banner-container>p{
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    top: 55px;
+    color: white;
+    font-size: 16px; 
+    padding: 10px 20%;
+}
+/*Link/button*/
+.home-background>.banner-container>.button-container{
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    top: 200px;
+    color: white;
+}
+.home-background>.banner-container>.button-container>a,
+.home-background>.banner-container>.button-container>span{
+    border: 3px solid white;
+    font-family: 'Open Sans Condensed', sans-serif;
+    color: white;
+    padding: 8px 18px;
+    font-size: 22px;
+    text-decoration: none;
+    font-weight: bold;
+    -webkit-transition: .3s;
+    transition: .3s;
+    margin: 0 7px;
+    border-radius: 33px;
+}
+.home-background>.banner-container>.button-container>a:hover,
+.home-background>.banner-container>.button-container>span:hover{
+    background: white;
+    color: #343434;
+}
+
+/*list support website*/
+.list-support-group{
+    margin: 20px;
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
+    text-align: center;
+}
+.list-support-website{
+    margin: 120px 5px;
+}
+.list-support-group .list-support-item{
+    width: 180px;
+    height: 60px;
+    line-height: 60px;
+    display: inline-block;
+    text-align: center;
+    margin: 30px 50px 30px 50px;
+}
+.list-support-group .list-support-item img{
+    vertical-align: middle;
+    max-height: 60px;
+    max-width: 180px;
+}
+.list-support-group .list-support-item img:hover{
+    box-shadow: 5px 3px 9px 0px #cecece;
+}
+
+/*Footer*/
+.footer-info{
+    background: #377869;
+    padding: 130px 0;
+}
+.ft-copyright{
+    text-align: center;
+    letter-spacing: 4px;
+    font-weight: bold;
+}
+.footer-col{
+    padding: 20px 30px;
+}
+.footer-col span{ /*title column*/
+    font-weight: bold;
+    font-size: 18px;
+    color: #ffffff;
+    margin: 0 0 10px;
+    position: relative;
+    bottom: 20px;
+}
+.footer-col a,
+.footer-col p{
+    display: block;
+    color: #e4e4e4;
+    text-decoration: none;
+    margin: 0 0 6px;
+}
+.footer-col a:hover{
+    color: white;
+}
+
+/*USE FOR ALL*/
+.medium-title{
+    text-align: center;
+    font-size: 17px;
+    font-weight: bold;
+    letter-spacing: 9px;
+    word-spacing: 20px;
+}
+.color-bold{
+    color: #377868;
+}
+.color-light{
+    color: #458f35;
+}
+.color-normal{
+    color: #428b44;
 }
