--- a/web/css/main.css
+++ b/web/css/main.css
@@ -379,3 +379,7 @@ hr.hr-style:before {
 .card:hover {
     box-shadow: 0px 0px 6px 4px rgba(58, 58, 58, 0.33);
 }
+.reading{
+    width: 60%;
+    margin: auto;
+}
