--- a/web/css/main.css
+++ b/web/css/main.css
@@ -8,6 +8,12 @@ and open the template in the editor.
     Author     : duong
 */
 /*This css use for all page, include in every head tag of app*/
+.ui-autocomplete-category {
+    font-weight: bold;
+    padding: .2em .4em;
+    margin: .8em 0 .2em;
+    line-height: 1.5;
+}
 .ui-autocomplete.atcl-container{
     padding: 5px;
     /*padding-top: 15px;*/
