--- a/web/css/main.css
+++ b/web/css/main.css
@@ -8,6 +8,11 @@ and open the template in the editor.
     Author     : duong
 */
 /*This css use for all page, include in every head tag of app*/
+.r-user-item.cbcontainer,
+.r-user-item{
+    display: inline-block;
+    width: 300px;
+}
 .ui-autocomplete-category {
     font-weight: bold;
     padding: .2em .4em;
@@ -405,4 +410,91 @@ hr.hr-style:before {
 .reading{
     width: 60%;
     margin: auto;
+}
+
+
+
+
+
+/*CUSTOM CHECKBOX*/
+/* Customize the label (the container) */
+.cbcontainer {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.cbcontainer input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.cbcontainer:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.cbcontainer input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.cbcontainer input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.cbcontainer .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+/*END CUSTOM CHECKBOX*/
+
+fieldset{
+    border: 1px solid gray; padding: 10px;
+}
+legend{
+    width: auto; border: none; padding: 0 5px;
+}
+.fixed-error-notice{
+    position: fixed;
+    top: 110px;
+    left: 20px;
+    z-index: 1;
 }
