optimize grant access (ActionRoles)

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -419,7 +419,7 @@ hr.hr-style:before {
 /*CUSTOM CHECKBOX*/
 /* Customize the label (the container) */
 .cbcontainer {
-  display: block;
+  display: inline-block;
   position: relative;
   padding-left: 35px;
   margin-bottom: 12px;
