Add logo product widget

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -8,6 +8,9 @@ and open the template in the editor.
     Author     : duong
 */
 /*This css use for all page, include in every head tag of app*/
+.logo {
+    max-width: 20px;
+}
 .r-user-item.cbcontainer,
 .r-user-item{
     display: inline-block;
@@ -56,8 +59,13 @@ li.ui-menu-item>div.ui-menu-item-wrapper.ui-state-active{
     right: 3px;
 }
 .prd-info{
-    position: relative;
-    top: 5px;
+    position: absolute;
+    bottom: 0;
+    height: 70px;
+}
+.prd-info p{
+    position: absolute;
+    bottom: 0;
 }
 .thumb{
     width: 100px;
