--- a/web/css/main.css
+++ b/web/css/main.css
@@ -8,6 +8,10 @@ and open the template in the editor.
     Author     : duong
 */
 /*This css use for all page, include in every head tag of app*/
+.homepage-content{
+    margin-top: 100px;
+    margin-bottom: 70px;
+}
 .logo {
     max-width: 20px;
 }
@@ -505,4 +509,84 @@ legend{
     top: 110px;
     left: 20px;
     z-index: 1;
+}
+
+
+/*SLIDER MULTI*/
+.carousel-inner { 
+    margin: auto; 
+    width: 90%; 
+}
+.carousel-control { width:  4%; }
+.carousel-control.left,
+.carousel-control.right {
+    background-image:none;
+}
+.glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right {
+    margin-top:-10px;
+    margin-left: -10px;
+    color: #444;
+}
+@media (max-width: 767px) {
+    .carousel-inner > .item.next,
+    .carousel-inner > .item.active.right {
+        left: 0;
+        -webkit-transform: translate3d(100%, 0, 0);
+        transform: translate3d(100%, 0, 0);
+    }
+    .carousel-inner > .item.prev,
+    .carousel-inner > .item.active.left {
+        left: 0;
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0);
+    }
+}
+@media (min-width: 767px) and (max-width: 992px ) {
+    .carousel-inner > .item.next,
+    .carousel-inner > .item.active.right {
+        left: 0;
+        -webkit-transform: translate3d(50%, 0, 0);
+        transform: translate3d(50%, 0, 0);
+    }
+    .carousel-inner > .item.prev,
+    .carousel-inner > .item.active.left {
+        left: 0;
+        -webkit-transform: translate3d(-50%, 0, 0);
+        transform: translate3d(-50%, 0, 0);
+    }
+}
+@media (min-width: 992px ) {
+    .carousel-inner > .item.next,
+    .carousel-inner > .item.active.right {
+        left: 0;
+        -webkit-transform: translate3d(16.7%, 0, 0);
+        transform: translate3d(16.7%, 0, 0);
+    }
+    .carousel-inner > .item.prev,
+    .carousel-inner > .item.active.left {
+        left: 0;
+        -webkit-transform: translate3d(-16.7%, 0, 0);
+        transform: translate3d(-16.7%, 0, 0);
+    }
+}
+.h-slide-thumb{
+    height: 250px;
+    display: inline-block;
+}
+/*.h-slide-thumb img{ width: 100%; }*/
+.slider-product{
+    height: 250px;
+    position: relative;
+    padding: 7px;
+}
+.slider-product .prd-info{
+    position: absolute;
+    bottom: 0;
+    background: #efefef;
+}
+.slider-out-top{
+    margin-top: 20px; 
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
+    padding: 30px 0;
 }
