--- a/web/css/main.css
+++ b/web/css/main.css
@@ -588,7 +588,7 @@ legend{
 }
 .slider-out-top{
     margin-top: 20px; 
-    border-top: 1px solid grey;
-    border-bottom: 1px solid grey;
+    /*border-top: 1px solid grey;*/
+    /*border-bottom: 1px solid grey;*/
     padding: 30px 0;
 }
