--- a/web/css/main.css
+++ b/web/css/main.css
@@ -8,13 +8,38 @@ and open the template in the editor.
     Author     : duong
 */
 /*This css use for all page, include in every head tag of app*/
+.blog-des{
+    font-size: 15px;
+}
+.blog-time-til-now{font-size: 13px; color: grey;}
+.sticky-top{
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 120px;
+}
+table.blog-tbl-report{margin: auto;}
+table.blog-tbl-report td{padding: 2px 15px;}
+ul.list{list-style: none;}
+ul.list a{text-decoration: none;}
+ul.list li{
+    border-bottom: 1px solid rgba(19, 80, 132, 0.25882352941176473);
+    padding-bottom: 20px;
+}
+.blog-thumb-container{
+    width: 250px;
+    height: 140px;
+    float: left;
+    margin-right: 15px;
+}
+.blog-thumb-container img{
+    width: 100%;
+    height: 100%;
+}
 .homepage-content{
     margin-top: 100px;
     margin-bottom: 70px;
 }
-.logo {
-    max-width: 20px;
-}
+.logo {max-width: 20px;}
 .r-user-item.cbcontainer,
 .r-user-item{
     display: inline-block;
@@ -213,7 +238,7 @@ input:checked + .slider:before {
     position: absolute;
     top: 0; left: 0;
     width: 100%; height: 100%;
-    background-image: url("/images/general/background_low.jpg");
+    background-image: url("../images/general/background_low.jpg");
     filter: brightness(0.9);
 }
 
