--- a/web/css/main.css
+++ b/web/css/main.css
@@ -8,6 +8,25 @@ and open the template in the editor.
     Author     : duong
 */
 /*This css use for all page, include in every head tag of app*/
+.ias-trigger{padding-bottom: 25px;}
+.ias-noneleft{clear: both;}
+.ias-trigger a{
+    background-color: #dadada;
+    border: none;
+    color: #353535;
+    padding: 16px 32px;
+    text-align: center;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition: 0.3s;
+    text-decoration: none;
+    position: relative;
+    top: 20px;
+}
+.ias-trigger a:hover{
+    background-color: #377868;
+    color: white;
+}
 .blog-des{
     font-size: 15px;
 }
