--- a/web/css/main.css
+++ b/web/css/main.css
@@ -498,7 +498,6 @@ hr.hr-style:before {
   -ms-user-select: none;
   user-select: none;
 }
-
 /* Hide the browser's default checkbox */
 .cbcontainer input {
   position: absolute;
@@ -507,7 +506,6 @@ hr.hr-style:before {
   height: 0;
   width: 0;
 }
-
 /* Create a custom checkbox */
 .checkmark {
   position: absolute;
@@ -517,29 +515,24 @@ hr.hr-style:before {
   width: 25px;
   background-color: #eee;
 }
-
 /* On mouse-over, add a grey background color */
 .cbcontainer:hover input ~ .checkmark {
   background-color: #ccc;
 }
-
 /* When the checkbox is checked, add a blue background */
 .cbcontainer input:checked ~ .checkmark {
   background-color: #2196F3;
 }
-
 /* Create the checkmark/indicator (hidden when not checked) */
 .checkmark:after {
   content: "";
   position: absolute;
   display: none;
 }
-
 /* Show the checkmark when checked */
 .cbcontainer input:checked ~ .checkmark:after {
   display: block;
 }
-
 /* Style the checkmark/indicator */
 .cbcontainer .checkmark:after {
   left: 9px;
@@ -553,6 +546,53 @@ hr.hr-style:before {
   transform: rotate(45deg);
 }
 /*END CUSTOM CHECKBOX*/
+
+
+/*CUSTOM RADIO*/
+/* The container */
+.rdocontainer {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+/* Hide the browser's default radio button */
+.rdocontainer input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+/* On mouse-over, add a grey background color */
+.rdocontainer:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+/* When the radio button is checked, add a blue background */
+.rdocontainer input:checked ~ .checkmark {
+    background-color: #2196F3;
+}
+/* Show the indicator (dot/circle) when checked */
+.rdocontainer input:checked ~ .checkmark:after {
+    display: block;
+}
+.rdocontainer .checkmark{
+    border-radius: 50%;
+}
+/* Style the indicator (dot/circle) */
+.rdocontainer .checkmark:after {
+    top: 9px;
+    left: 9px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
+}
+/*END CUSTOM RADIO*/
 
 fieldset{
     border: 1px solid gray; padding: 10px;
